# Gex2PS1ModelExporter

./: .gitignore  CMakeLists.txt  CMakePresets.json  Gex2PS1ModelExporter.cpp  Gex2PS1ModelExporter.h  Gex2PS1ModelNamesLister.cpp  Gex2PS1TextureExporter.cpp  ModelStructs.h  PKGBUILD  README.md  gex2ps1modelexporter.spec
build-pkgs/arch/: PKGBUILD
build-pkgs/debian/: changelog  control  copyright  debhelper-build-stamp  files  preinst  rules
build-pkgs/rpm/: gex2ps1modelexporter.spec
include/: Constants.h  Gex2PS1ModelExporter.h  Gex2PS1SharedFunctions.h  Gex2PS1TextureExporter.h  ModelExporter.h  ModelNamesLister.h  ModelStructs.h  PolygonsInterpreter.h  SharedFunctions.h  TextureExporter.h  TextureStructs.h  VerticesInterpreter.h  XMLExport.h
src/: Gex2PS1ModelExporter.cpp  Gex2PS1ModelNamesLister.cpp  Gex2PS1TextureExporter.cpp  ModelExporter.cpp  ModelNamesLister.cpp  PolygonsInterpreter.cpp  SharedFunctions.cpp  TextureExporter.cpp  VerticesInterpreter.cpp  XMLExport.cpp
